fix page styling, switch links to new website pages

--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -5,68 +5,76 @@
     <title>Camps/High Adventure</title>
     <link rel='stylesheet' href='styles/components.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
+    <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
+    <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   </style>
   <body>
-    <banner-2>
+    <banner>
       <container>
-        <heading>Camps/High Adventure</heading>
-        <p>This page provides information about summer/winter camps, high adventure camps, and other special trips (for example, Bridges Uganda).  Registration, dates and other information can be found in either the event descriptions below or via the <a href="https://www.troop370atlanta.org/calendar" target="_self">troop calendar</a>.  Information about the Troop's regular overnight trips can on the <a href="https://www.troop370atlanta.org/calendar" target="_self">troop calendar</a> or on the <a href="https://www.troop370atlanta.org/campout-schedule-local-events" target="_self">campout schedule page</a>.</p>
+        <h3-8 class="hide-mobile">Camps/High Adventure</h3-8>
+        <p>This page provides information about summer/winter camps, high adventure camps, and other special trips (for example, Bridges Uganda).  Registration, dates and other information can be found in either the event descriptions below or via the <a href="calendar_encrypted.html" target="_self">troop calendar</a>.  Information about the Troop's regular overnight trips can on the <a href="calendar_encrypted.html" target="_self">troop calendar</a> or on the <a href="campout-schedule-local-events.html" target="_self">campout schedule page</a>.</p>
       </container>
-    </banner-2>
-    <content-strip-3>
+    </banner>
+    <banner class="red">
       <container>
-        <heading>2018 Camps & High Adventure</heading>
+        <h3-8>2018 Camps & High Adventure</h3-8>
       </container>
-    </content-strip-3>
-    <content-strip-4>
+    </banner>
+    <content-strip class="last-before-banner">
       <container>
-        <heading>Scouting Bridges: Uganda – East Africa</heading>
+        <h4>Scouting Bridges: Uganda – East Africa</h4>
         <p>December 26, 2018 – January 6, 2019<br><br>Scouting Bridges: Uganda is a cultural exchange program which was started over five years ago with our scout friends in Uganda. We have made several trips there, and have welcomed them here on several occasions. The Troop will be camping at a school in Lugazi, which is near Jinja, one of Uganda's larger cities. We will plan scouting games, day trips to local areas, and other special events.</p>
       </container>
-    </content-strip-4>
-    <content-strip-3>
+    </content-strip>
+    <banner class="red">
       <container>
-        <heading>2019 Camps & High Adventure</heading>
+        <h3-8>2019 Camps & High Adventure</h3-8>
       </container>
-    </content-strip-3>
-    <content-strip-4>
+    </banner>
+    <content-strip>
       <container>
-        <heading>SCUBA Trip</heading>
-        <p>January 12 - 15, 2019</p>
+        <h4>SCUBA Trip at Key Largo</h4>
+        <p>January 18 - 21, 2019<br><br>This year's SCUBA trip is at Key Largo over MLK weekend. Particpate in several dives over the long weekend. SCUBA certification is required - classes are available.<br><br><a href="scuba-key-largo-sign-up_encrypted.html">Sign up for SCUBA Trip</a></p>
       </container>
-    </content-strip-4>
-    <content-strip-4>
+    </content-strip>
+    <content-strip>
       <container>
-        <heading>Okpik Sampler High Adventure at Ely, Minnesota</heading>
-        <p>February 15 - 18, 2019<br><br>In Okpik Weekend Sampler, scouts experience a true Northwoods winter: learning how to thrive in subzero temperatures, travel across frozen wilderness lakes and construct their own sleeping structures out of snow. All trips are fully outfitted and provisioned, including almost all of the personal gear necessary to stay warm in the winter. You will pack your gear onto sleds and head out into the wilderness to spend 1-2 nights. You will get to try out a full array of winter activities like cross-country skiing, snowshoeing and dog sledding.</p>
+        <h4>Okpik Sampler High Adventure at Ely, Minnesota</h4>
+        <p>February 15 - 18, 2019<br><br>In Okpik Weekend Sampler, scouts experience a true Northwoods winter: learning how to thrive in subzero temperatures, travel across frozen wilderness lakes and construct their own sleeping structures out of snow. All trips are fully outfitted and provisioned, including almost all of the personal gear necessary to stay warm in the winter. You will pack your gear onto sleds and head out into the wilderness to spend 1-2 nights. You will get to try out a full array of winter activities like cross-country skiing, snowshoeing and dog sledding.<br><br><a href="okpik-2019-sign-up_encrypted.html">Sign up for Okpik</a></p>
       </container>
-    </content-strip-4>
-    <content-strip-4>
+    </content-strip>
+    <content-strip>
       <container>
-        <heading>Summer Camp at Woodruff Scout Reservation</heading>
+        <h4>Summer Camp at Woodruff Scout Reservation</h4>
         <p>June 9 - 15, 2019<br><br>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
       </container>
-    </content-strip-4>
-    <content-strip-4>
+    </content-strip>
+    <content-strip>
       <container>
-        <heading>Sea Base at St. Thomas, US Virgin Islands</heading>
-        <p>Troop: June 24 - 30, 2019<br>Venturing: July 7 - 13, 2019<br><br>Sea Base St. Thomas will allow Scouts to travel to the tropics and experience the allure of the Virgin Islands. Here the tradewinds blow and the territories of St. Thomas and St. John offer some of the best sailing and snorkeling in the Caribbean.<br><br><a href="https://www.troop370atlanta.org/copy-of-woodruff-summer-camp-regist" target="_blank">Sign up for Sea Base with Troop 370</a><br><a href="https://www.troop370atlanta.org/venture-2019-sea-base-st-thom" target="_blank">Sign up for Sea Base with Troop 370</a></p>
+        <h4>Sea Base at St. Thomas, US Virgin Islands</h4>
+        <p>Troop: June 24 - 30, 2019<br>Venturing: July 7 - 13, 2019<br><br>Sea Base St. Thomas will allow Scouts to travel to the tropics and experience the allure of the Virgin Islands. Here the tradewinds blow and the territories of St. Thomas and St. John offer some of the best sailing and snorkeling in the Caribbean.<br><br><a href="sea-base-troop-2019-sign-up_encrypted.html" target="_blank">Sign up for Sea Base with Troop 370</a><br><a href="sea-base-crew-2019-sign-up_encrypted.html" target="_blank">Sign up for Sea Base with Troop 370</a></p>
       </container>
-    </content-strip-4>
-    <content-strip-4>
+    </content-strip>
+    <content-strip>
       <container>
-        <heading>Philmont Scout Ranch at Cimarron, NM</heading>
-        <p>Troop: June 28 - July 11, 2019; July 16 - 29, 2019<br>Venturing: July 5 - 18, 2019<br><br>Philmont Scout Ranch provides an unforgettable adventure in backpacking, with land along hundreds of miles of rugged, rocky trails. Philmont Scout Ranch programs feature the best of the Old West - horseback riding, burro packing, gold panning, chuckwagon dinners and interpretive history - with exciting challenges for today, such as rock climbing, burro racing, mountain biking and .30-06 rifle shooting. It's an unbeatable recipe for fast-moving fun and the outdoors.<br><br><a href="https://www.troop370atlanta.org/troop-philmont-2019">Sign up for Philmont with Troop 370</a><br><a href="https://www.troop370atlanta.org/venture-philmont-2019">Sign up for Philmont with Crew 370</a></p>
+        <h4>Philmont Scout Ranch at Cimarron, NM</h4>
+        <p>Troop: June 28 - July 11, 2019; July 16 - 29, 2019<br>Venturing: July 5 - 18, 2019<br><br>Philmont Scout Ranch provides an unforgettable adventure in backpacking, with land along hundreds of miles of rugged, rocky trails. Philmont Scout Ranch programs feature the best of the Old West - horseback riding, burro packing, gold panning, chuckwagon dinners and interpretive history - with exciting challenges for today, such as rock climbing, burro racing, mountain biking and .30-06 rifle shooting. It's an unbeatable recipe for fast-moving fun and the outdoors.<br><br><a href="philmont-troop-2019-sign-up_encrypted.html">Sign up for Philmont with Troop 370</a><br><a href="philmont-crew-2019-sign-up_encrypted.html">Sign up for Philmont with Crew 370</a></p>
       </container>
-    </content-strip-4>
-    <content-strip-4>
+    </content-strip>
+    <content-strip>
       <container>
-        <heading>World Jamboree</heading>
+        <h4>World Jamboree</h4>
         <p>July 21 - August 2, 2019<br><br>The World Scout Jamboree (WSJ) is the largest regular event organized by the World Organization of the Scout Movement (WOSM), gathering up to 50,000 Scouts from more than 150 countries around the World. It is an educational event to promote peace and understanding among young people from different cultures. The World Scout Jamboree includes many activities available at the Summit Bechtel Scout Reserve. For more information, visit the host website at 2019wsj.org. The 2019 WSJ will be the 24th Jamboree in Scouting history. The first Jamboree took place in England in 1920.</p>
       </container>
-    </content-strip-4>
+    </content-strip>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
+  <script type="text/javascript">
+  	$(".button-collapse").sideNav();
+  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
+  <div class="hiddendiv common"></div>
   </body>
 </html>
