--- a/pinestraw.html
+++ b/pinestraw.html
@@ -6,8 +6,8 @@
     <link rel='stylesheet' href='styles/components.css'>
   </head>
   </style>
-  <body>
-    <iframe src="https://www.troop370atlanta.org/pinestraw" style="border:0px #ffffff none;height:calc(100% - 112px); name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
+  <body style="height:calc(100vh - 64px);overflow-y:hidden;">
+    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta/pinestraw" style="border:0px #ffffff none;height:calc(100% - 112px); name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
