fit iframe to page correctly

--- a/pinestraw.html
+++ b/pinestraw.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Pine Straw</title>
     <link rel='stylesheet' href='styles/components.css'>
+    <link rel='stylesheet' href='styles/page-specific.css'>
   </head>
   </style>
-  <body style="height:calc(100vh - 64px);overflow-y:hidden;">
-    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta/pinestraw" style="border:0px #ffffff none;height:calc(100vh - 64px); name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
+  <body id="pinestraw-embed">
+    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta/pinestraw" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
