--- a/payments.html
+++ b/payments.html
@@ -12,6 +12,14 @@
         <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
       </container>
     </banner>
+    <banner class="red">
+      <container>
+        <p>Paying for pine straw? Order at out online store.</p>
+        <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
+          <a href='pinestraw.html#pinestraw' type='button' varient='light'>Online store</a>
+        </buttonrow>
+      </container>
+    </banner>
     <content-strip>
       <container>
         <h4>Venmo</h4>
