--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -20,7 +20,7 @@
         <h4>Monthy Campout Schedule</h4>
         <p>Troop 370 schedules monthly campouts throughout the “camping year”, together with Winter Camp and Summer Camp.  Find links to campout signup forms on the Troop's Google Calendar or Facebook page.  On the calendar, click on the campout/event to see details about signing up; in order to view additional details and links about the campout, you can also click "more details" after the campout window opens within the calendar.</p>
         <p></p>
-        <p><a href="calendar/html">Click here to go to the Troop's Google Calendar</a></p>
+        <p><a href="./calendar_encrypted.html#members">Click here to go to the Troop's Google Calendar</a></p>
         <p></p>
         <span class="plist">
           <p style="font-weight:bold;">2018-2019 Camping Schedule</p>
@@ -55,7 +55,7 @@
     <content-strip>
       <container>
         <h4>Merit Badge Clinic</h4>
-        <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="meritbadge.info">meritbadge.info</a><br>&#8193;&#8193;Summer Merit Badge Clinic - August 18, 2018<br>&#8193;&#8193;Winter Merit Badge Clinic – February 9, 2019 (Part of Scout Weekend)</p>
+        <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="http://meritbadge.info">meritbadge.info</a><br>&#8193;&#8193;Summer Merit Badge Clinic - August 18, 2018<br>&#8193;&#8193;Winter Merit Badge Clinic – February 9, 2019 (Part of Scout Weekend)</p>
       </container>
     </content-strip>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
