fix background for 404 erros not in site root

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
-  <body style="background: url('src/404.jpg') no-repeat center center fixed;background-size:cover;">
+  <body style="background: url('/src/404.jpg') no-repeat center center fixed;background-size:cover;">
     <banner class="extra-padding-y" style="background: none !important;text-align:center">
       <conatainer style="width:100%">
         <h3-8>404 Error</h3-8>
