fix broken link

--- a/advancement.html
+++ b/advancement.html
@@ -29,7 +29,7 @@
             <h4>Merit Badge Clinics</h4>
             <p>Sign up for Merit Badge classes at meritbadge.info</p>
             <p></p>
-            <p><a href="meritbadge.info">Go to meritbadge.info</a></p>
+            <p><a href="http://meritbadge.info">Go to meritbadge.info</a></p>
           </div>
         </div>
         <div class="split50">
