hide campout slide (campout sign-up closed)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-cell" id="card2">
+        <!--<div class="carousel-cell" id="card2">
           <div class="carousel-text-card">
             <div>
               <h2 class="carousel-title">Backpacking: Siler Bald</h2>
@@ -31,7 +31,7 @@
               <a href="campout-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
             </div>
           </div>
-        </div>
+        </div>-->
         <div class="carousel-cell" id="card3">
           <div class="carousel-text-card">
             <div>
