--- a/payments.html
+++ b/payments.html
@@ -14,9 +14,9 @@
     </banner>
     <banner class="red">
       <container>
-        <p>Paying for pine straw? Order at out online store.</p>
+        <p>Paying for pine straw or holiday wreaths? Order at out online store.</p>
         <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
-          <a href='pinestraw.html#pinestraw' type='button' varient='light'>Online store</a>
+          <a href='https://jackebuehner.wixsite.com/troop370atlanta' target="_blank" type='button' varient='light'>Online store</a>
         </buttonrow>
       </container>
     </banner>
