--- a/pinestraw.html
+++ b/pinestraw.html
@@ -11,7 +11,7 @@ redirect_from: "/troop-370-pinestraw"
   </head>
   </style>
   <body id="pinestraw-embed">
-    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta/pinestraw" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
+    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
