proper links to store.troop370atlanta.org

--- a/pinestraw.html
+++ b/pinestraw.html
@@ -2,23 +2,14 @@
 redirect_from: "/troop-370-pinestraw"
 ---
 <!DOCTYPE html>
-</html>
-  <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pine Straw</title>
-    <link rel='stylesheet' href='styles/components.css'>
-    <link rel='stylesheet' href='styles/page-specific.css'>
-  </head>
-  </style>
-  <body id="pinestraw-embed">
-    <iframe src="https://jackebuehner.wixsite.com/troop370atlanta" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
-  <script type="text/javascript">
-  	$(".button-collapse").sideNav();
-  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-  <div class="hiddendiv common"></div>
-  </body>
+<html>
+<head>
+    <meta charset="utf8">
+    <meta http-equiv="refresh" content="0; url=http://store.troop370atlanta.org">
+    <link rel="canonical" href="http://store.troop370atlanta.org">
+    <title>This page has moved</title>
+</head>
+<body>
+    <p>This page has moved. Redirecting you to <a href="http://store.troop370atlanta.org">store.troop370atlanta.org</a>&hellip;</p>
+</body>
 </html>
