--- a/payments.html
+++ b/payments.html
@@ -16,7 +16,7 @@
       <container>
         <p>Paying for pine straw or holiday wreaths? Order at out online store.</p>
         <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
-          <a href='https://jackebuehner.wixsite.com/troop370atlanta' target="_blank" type='button' varient='light'>Online store</a>
+          <a href='http://store.troop370atlanta.org' target="_blank" type='button' varient='light'>Online store</a>
         </buttonrow>
       </container>
     </banner>
