--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
             <button class="btn waves-effect waves-light contact-submit-button" type="submit" name="action">Submit</button>
             <input type="hidden" name="_next" value="submission-received.html#contact" />
             <input type="hidden" name="_format" value="plain" />
+            <input type="hidden" name="_cc" value="hgevans@bellsouth.net,iconherder@gmail.com" />
           </form>
         </div>
       </container>
