remove pinestraw; add holiday wreaths

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <carousel>
     <container>
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
-        <div class="carousel-cell" id="card5">
-          <div class="carousel-text-card">
+        <div class="carousel-cell" id="card5n">
+          <div class="carousel-text-card" style="width:100%;">
             <div>
-              <h2 class="carousel-title">Pine Straw Sale</h2>
-              <p class="carousel-info">November 3, 2018</p>
-              <a href="pinestraw.html#pinestraw" type="button" varient="light">Order</a>
+              <h2 class="carousel-title">Holiday Wreath Fundraiser</h2>
+              <p class="carousel-info">Order by Saturday, November 10</p>
+              <a href="https://store.troop370atlanta.org" type="button" target="_blank" varient="light">Order</a>
             </div>
           </div>
         </div>
