fix typo: out -> our

--- a/payments.html
+++ b/payments.html
@@ -14,7 +14,7 @@
     </banner>
     <banner class="red">
       <container>
-        <p>Paying for pine straw or holiday wreaths? Order at out online store.</p>
+        <p>Paying for pine straw or holiday wreaths? Order at our online store.</p>
         <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
           <a href='http://store.troop370atlanta.org' target="_blank" type='button' varient='light'>Online store</a>
         </buttonrow>
