--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   <carousel>
     <container>
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
+        <div class="carousel-cell" id="card2">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Campout: S-Games</h2>
+              <p class="carousel-info">November 9-10</p>
+              <a href="campout-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
+            </div>
+          </div>
+        </div>
         <div class="carousel-cell" id="card5n">
           <div class="carousel-text-card" style="width:100%;">
             <div>
@@ -23,15 +32,6 @@
             </div>
           </div>
         </div>
-        <!--<div class="carousel-cell" id="card2">
-          <div class="carousel-text-card">
-            <div>
-              <h2 class="carousel-title">Backpacking: Siler Bald</h2>
-              <p class="carousel-info">October 20-21</p>
-              <a href="campout-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
-            </div>
-          </div>
-        </div>-->
         <div class="carousel-cell" id="card4">
           <div class="carousel-text-card">
             <div>
