--- a/payments.html
+++ b/payments.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Payments</title>
     <link rel='stylesheet' href='styles/components.css'>
+    <link rel='stylesheet' href='styles/page-specific.css'>
   </head>
   <body>
     <banner>
@@ -23,11 +24,10 @@
     <content-strip>
       <container>
         <h4>Venmo</h4>
-        <p>PREFERRED PAYMENT METHOD<br><br>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the 'What's it for?' section.<br><br>Click here to sign up and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can search for us @Troop-ThreeSeventy<br><br>Credit card payments will incur merchant fees.</p>
+        <p>PREFERRED PAYMENT METHOD<br><br>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the 'What's it for?' section.<br><br>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.<br><br>Credit card payments will incur merchant fees.</p>
         <buttonrow>
-          <a href='https://venmo.com/troop-threeseventy' type='button' varient='dark'>View Troop 370 on Venmo</a>
-          <a href='https://itunes.apple.com/us/app/venmo/id351727428?mt=8' type='button' varient='dark'>Venmo for iOS</a>
-          <a href='https://play.google.com/store/apps/details?id=com.venmo' type='button' varient='dark'>Venmo for Android</a>
+          <a href='https://venmo.com/troop-threeseventy' id='venmo' type='button' varient='dark'>Pay on Venmo</a>
+          <a href='http://onelink.to/zryeqw' type='button' varient='dark'>Get app</a>
         </buttonrow>
       </container>
     </content-strip>
@@ -36,7 +36,7 @@
         <h4>PayPal</h4>
         <p>Use the 'Friends & Family' transfer option to make payments without merchant fees. This option is available only if your Paypal and bank account are connected. Credit card payments will incur merchant fees.<br><br>Send money via Paypal to troop370treasurer@gmail.com and include SCOUT NAME and EVENT NAME with your payment.<br><br>If you are paying for multiple campers or events, please pay for them in separate Paypal transactions, NOT in a single payment. Otherwise, you risk not getting credited for some campers.</p>
         <buttonrow>
-          <a href='https://www.paypal.com/myaccount/transfer/send' type='button' varient='dark'>Pay using PayPal</a>
+          <a href='https://www.paypal.com/myaccount/transfer/send' type='button' varient='dark' id="paypal">Pay using PayPal</a>
         </buttonrow>
       </container>
     </content-strip>
@@ -45,8 +45,8 @@
         <h4>Cash, Check, or Money Order</h4>
         <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
         <buttonrow>
-          <a href='https://www.troop370atlanta.org/' type='button' varient='dark'>Weekly meeting details</a>
-          <a href='https://www.troop370atlanta.org/campout-sign-up' type='button' varient='dark'>Monthly campout</a>
+          <a href='https://www.troop370atlanta.org/' type='button' varient='dark'>Meeting details</a>
+          <a href='https://www.troop370atlanta.org/campout-sign-up' type='button' varient='dark'>Campout sign-up</a>
         </buttonrow>
       </container>
     </content-strip>
