--- a/payments.html
+++ b/payments.html
@@ -15,9 +15,9 @@
     </banner>
     <banner class="red">
       <container>
-        <p>Paying for pine straw or holiday wreaths? Order at our online store.</p>
+        <p>Trying to recharter? Pay on the recharter page, not here.</p>
         <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
-          <a href='http://store.troop370atlanta.org' target="_blank" type='button' varient='light'>Online store</a>
+          <a href='https://troop370atlanta.org/recharter.html#payments' target="_blank" type='button' varient='light'>Recharter page</a>
         </buttonrow>
       </container>
     </banner>
