--- a/404.html
+++ b/404.html
@@ -10,15 +10,15 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body style="background: url('/src/404.jpg') no-repeat center center fixed;background-size:cover;">
-    <banner class="extra-padding-y" style="background: none !important;text-align:center">
-      <conatainer style="width:100%">
-        <h3-8>404 Error</h3-8>
+    <div class="banner extra-padding-y" style="background: none !important;text-align:center">
+      <div class="conatainer" style="width:100%">
+        <h3 class="size8">404 Error</h3>
         <p>Page not found</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="index.html#home" type="button" varient="light" class="bigger">Home page</a>
-        </buttonrow>
-      </container>
-    </banner>
+        </div>
+      </div>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script type="text/javascript">
