--- a/about.html
+++ b/about.html
@@ -10,39 +10,39 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="extra-padding-y red">
-      <container>
-        <h3-8>About Troop 370</h3-8>
+    <div class="banner extra-padding-y red">
+      <div class="container">
+        <h3 class="size8">About Troop 370</h3>
         <p>Welcome to the Boy Scouts of America and Troop 370.<br><br>Troop 370 meets each Wednesday night at 7:30 pm in the Activities Building at St. James UMC.  Troop 370 currently has over 100 registered Scouts in the Troop.<br><br>Troop 370 is a very active Troop. Click here to view a list of our activities.<br><br>By becoming a parent of a Boy Scout you are starting your son out on the great adventure of scouting. This is an important and rewarding endeavor that you will share with him.<br><br>Our sponsor, or Chartered Organization, is St. James United Methodist Church. Troop 370 is non-denominational and welcomes all boys ages 11 to 18 to Scouting. A boy needs no prior experience to become a Boy Scout. Troop 370 has five main goals for our Boy Scouts:<br>&nbsp• Growth in moral strength and character<br>&nbsp• Participate in citizenship<br>&nbsp• Development of physical, moral, and emotional fitness<br>&nbsp• Be comfortable in and appreciate outdoor activities Leadership<br><br>Our program will make your son a better person and give him the fundamental tools to be successful in whatever path he chooses in life. These skills are learned by Scouts working together and doing things themselves.<br><br>Last, but not least, our goal is to have fun.</p>
-      </container>
-    </banner>
-    <banner class="extra-padding-y">
-      <container>
-        <h3-8>Mission Statement</h3-8>
+      </div>
+    </div>
+    <div class="banner extra-padding-y">
+      <div class="container">
+        <h3 class="size8">Mission Statement</h3>
         <p>The mission of the Boy Scouts of America is to prepare young people to make ethical choices over their lifetimes by instilling in them the values of the Scout Oath and Law.</p>
-      </container>
-    </banner>
-    <banner class="extra-padding-y white">
-      <container>
-        <h3-8>Teaching Life Skills</h3-8>
+      </div>
+    </div>
+    <div class="banner extra-padding-y white">
+      <div class="container">
+        <h3 class="size8">Teaching Life Skills</h3>
         <p>Scouting is a values-based program with its own code of conduct. The Scout Oath and Law help instill the values of good conduct and honesty. A boy who spends one year in a Scout troop will learn lifetime skills. He will learn basic outdoor skills, first aid, citizenship training, leadership skills, self-reliance, and how to get along with others. Scouting will prepare him to live a more productive and fulfilling life</p>
-      </container>
-    </banner>
-    <banner class="extra-padding-y red">
-      <container>
-        <h3-8>Methods of Scouting</h3-8>
+      </div>
+    </div>
+    <div class="banner extra-padding-y red">
+      <div class="container">
+        <h3 class="size8">Methods of Scouting</h3>
         <p><strong>The Ideals - </strong>The ideals of the Boy Scouts of America are spelled out in the Scout Oath, Law, Motto, and Slogan.<br><br><strong>The Patrol Method - </strong>Made up of boys who are close in age and experience level, each patrol helps its members develop a sense of pride and identity.<br><br><strong>The Outdoors - </strong>Most of Troop 370&rsquo;s activities are designed to take place outdoors where boys can find real adventure. Our schedule can be viewed on the Boy Scout Troop Calendar page.<br><br><strong>Advancement - </strong>As one of eight methods of Scouting, advancement is a natural outcome of the other seven. A scout who is active in the Troop 370 program will almost certainly find himself advancing along the trail to Eagle Scout.<br><br><strong>Association with Adults - </strong>Boys learn a great deal from watching how adults conduct themselves. Scout leaders are positive role models for the members of the Troop.<br><br><strong>Personal Growth -</strong> Scouting age boys are experiencing dramatic physical and emotional growth. Scouting offers them opportunities to channel their energy into productive endeavors and find answers they are seeking to many of their questions.<br><br><strong>Leadership Development -</strong> Troop 370 is a boy led unit. Through leadership experiences, boys learn planning, organization and decision making.<br><br><strong>The Uniform -</strong> Wearing the uniform develops a sense of belonging to the patrol and troop. The Troop 370 uniform policy is discussed in the New Parent Handbook.</p>
-      </container>
-    </banner>
-    <banner class="extra-padding-y">
-      <container>
-        <h3-8>Get the New Parent Handbook</h3-8>
+      </div>
+    </div>
+    <div class="banner extra-padding-y">
+      <div class="container">
+        <h3 class="size8">Get the New Parent Handbook</h3>
         <p>The Troop 370 New Parent Handbook is packed full of information.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="forms-documents.html" type="button" varient="light" class="bigger">Learn more</a>
-        </buttonrow>
-      </container>
-    </banner>
+        </div>
+      </div>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
