--- a/advancement.html
+++ b/advancement.html
@@ -10,12 +10,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="extra-padding-y center hide-mobile">
+    <div class="banner extra-padding-y center hide-mobile">
       <container>
         <h3-8>Advancement</h3-8>
         <p>It is recommended that Scouts attempt to get something signed off towards advancement at each meeting.  Troop 370 has registered Merit Badge Counselors and Scout Instructors to help Scouts advance. View the list below for advancement resources.</p>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <div class="split50">
