--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -10,11 +10,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="hide-mobile">
+    <div class="banner hide-mobile">
       <container>
         <h3-8>Campout Schedule and Local Events</h3-8>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h4>Monthy Campout Schedule</h4>
