--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </container>
   </carousel>
-  <banner class="extra-padding-y">
+  <div class="banner extra-padding-y">
     <container>
       <h3-8>Welcome to Troop 370</h3-8>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
@@ -52,7 +52,7 @@
         <a href="about.html#about" type="button" varient="light" class="bigger">About page</a>
       </buttonrow>
     </container>
-  </banner>
+  </div>
   <carousel>
     <container>
       <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
@@ -91,13 +91,13 @@
       </div>
     </container>
   </carousel>
-  <banner class="extra-padding-y red" id="time-banner">
+  <div class="banner extra-padding-y red" id="time-banner">
     <container>
       <img id="meeting-icon" alt="meeting-icon" src="src/icons/meeting icon.png">
       <h3-8>Weekly Meetings</h3-8>
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </container>
-  </banner>
+  </div>
 <script>
   if (navigator.serviceWorker) {
     navigator.serviceWorker.register('service-worker.js')
