--- a/leadership-training.html
+++ b/leadership-training.html
@@ -10,11 +10,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="red hide-mobile">
+    <div class="banner red hide-mobile">
       <container>
         <h3-8>Leadership Training</h3-8>
       </container>
-    </banner>
+    </div>
     <content-strip class="blue">
       <container>
         <h4>Introduction to Leadership Skills for Troops (ILST)</h4>
