--- a/payments.html
+++ b/payments.html
@@ -7,20 +7,20 @@
     <link rel='stylesheet' href='styles/page-specific.css'>
   </head>
   <body>
-    <banner>
+    <div class="banner">
       <container>
         <h3-8 class="hide-mobile">Payments</h3-8>
         <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
       </container>
-    </banner>
-    <banner class="red">
+    </div>
+    <div class="banner red">
       <container>
         <p>Trying to recharter? Pay on the recharter page, not here.</p>
         <buttonrow style="padding-top:var(--banner-elements-padding-between)!important;">
           <a href='https://troop370atlanta.org/recharter.html#payments' target="_blank" type='button' varient='light'>Recharter page</a>
         </buttonrow>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h4>Venmo</h4>
