--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner>
+    <div class="banner">
       <container>
         <h3-8 class="hide-mobile" >Contact</h3-8>
         <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h3-8>General Contact</h3-8>
