--- a/eagle-scout-honor-roll.html
+++ b/eagle-scout-honor-roll.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="white">
+    <div class="banner white">
       <container>
         <h3-8 class="hide-mobile">Eagle Scout Honor Roll</h3-8>
         <p>Troop 370 has a proud tradition of Eagle Scouts dating back to our first Eagle, George Takis, in 1965. Through the PDF file below you can view the impact that our Eagle Scouts, now over 200 in number, have had on their community through their Eagle Service Projects. What is more, our Troop 370 Eagle Scouts have continued to make their mark on the world through their service and leadership as adults.</p>
@@ -18,7 +18,7 @@
           <a href="#eagle-list" type="button" varient="dark">View Eagle Honor Roll List</a>
         </buttonrow>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <iframe src="https://www.batchgeo.com/map/a30ec08cf79f88a9f9a28322cda3d34c" class="project-map"></iframe>
