--- a/faqs.html
+++ b/faqs.html
@@ -10,11 +10,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="hide-mobile">
+    <div class="banner hide-mobile">
       <container>
         <h3-8>Frequently Asked Questions</h3-8>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h4>Where can I get help?</h4>
