--- a/forms-documents.html
+++ b/forms-documents.html
@@ -10,11 +10,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="extra-padding-y center hide-mobile">
+    <div class="banner extra-padding-y center hide-mobile">
       <container>
         <h3-8>Forms &amp; Documents</h3-8>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <div class="split50">
