--- a/helpful-links.html
+++ b/helpful-links.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="white">
+    <div class="banner white">
       <container>
         <h3-8>Helpful Links</h3-8>
         <p><a href="scouting.org">Boy Scouts of America</a></p>
@@ -19,7 +19,7 @@
         <p><a href="https://www.scouting.org/scoutsource/HealthandSafety/GSS.aspx">Guide to Safe Scouting</a></p>
         <p><a href="https://www.rei.com/learn/expert-advice/loading-backpack.html">REI: How to pack a backpack (video)</a></p>
       </container>
-    </banner>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
