--- a/leaders.html
+++ b/leaders.html
@@ -10,11 +10,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner>
+    <div class="banner">
       <container>
         <h3-8>Current Leadership</h3-8>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h4>Scouts</h4>
