--- a/new-scouts.html
+++ b/new-scouts.html
@@ -10,18 +10,18 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner class="red">
+    <div class="banner red">
       <container>
         <p class="white" style="color:#111;padding:30px;margin: calc(var(--banner-padding-y) + 0px) calc(var(--banner-padding-x) + 20px);">Dear Prospective Scouts,<br><br>We are very excited that you are considering Troop 370 to become your future Boy Scout Troop.  If you would like, stop by at a meeting on any Wednesday night starting at 7:30 and ending at 9:00. Troop 370 has large amount of active members, and over the years, we have helped 212 scouts achieve the rank of Eagle Scout. We also go on camping trips every month. In addition, we usually have at least one High Adventure Trip every year, whether it be to Sea Base in the Bahamas, Philmont in New Mexico, or Northern Tier in Canada. Furthermore, we have a sister troop in Uganda Africa who we visit every year. We hope to see you soon and will always welcome prospective Scouts.<br><br>Sincerely,<br>The Leadership Team at Troop 370</p>
       </container>
-    </banner>
-    <banner class="extra-padding-y" id="time-banner">
+    </div>
+    <div class="banner extra-padding-y" id="time-banner">
       <container>
         <img id="meeting-icon" src="src/icons/meeting icon.png">
         <h3-8>Weekly Meetings</h3-8>
         <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
       </container>
-    </banner>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
