--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -26,7 +26,7 @@
         </ul>
       </container>
     </topnav>
-    <banner>
+    <div class="banner">
       <container>
         <h3-8>Banner</h3-8>
         <subtitle>subtitle</subtitle>
@@ -34,7 +34,7 @@
           <a href="#" type="button" varient="light">Button</a>
         </buttonrow>
       </container>
-    </banner>
+    </div>
     <content-strip>
       <container>
         <h3-8>Strip h3-8</h3-8>
