--- a/submission-received.html
+++ b/submission-received.html
@@ -10,14 +10,14 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body style="background-color: var(--banner-background-color);">
-    <banner>
+    <div class="banner">
       <container class="center" style="height:calc(100vh - 185px);padding-top:0;padding-bottom:0;">
         <h3-8>Submission Sent</h3-8>
         <buttonrow>
           <a href="contact.html#contact" type="button" varient="light">Return</a>
         </buttonrow>
       </container>
-    </banner>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
