--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <container>
       <h3-8>Welcome to Troop 370</h3-8>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
-      <buttonrow>
+      <div class="buttonrow">
         <a href="about.html#about" type="button" varient="light" class="bigger">About page</a>
-      </buttonrow>
+      </div>
     </container>
   </div>
   <carousel>
