--- a/leaders.html
+++ b/leaders.html
@@ -22,9 +22,9 @@
         <p>Assistant Senior Patrol Leader over Patrols: Logan Hunt</p>
         <p>Assistant Senior Patrol Leader over Quartermasters, Scribes, Librarians, Historians, and Webmasters: Henry Peck</p>
         <p>Assistant Senior Patrol Leader over Instructors, Troop Guides, Den Chiefs, and Gymmasters: Sterling Shepard</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a type="button" varient="dark">More Positions & Contact Information</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip>
