--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -30,9 +30,9 @@
       <container>
         <h3-8>Banner</h3-8>
         <subtitle>subtitle</subtitle>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="#" type="button" varient="light">Button</a>
-        </buttonrow>
+        </div>
       </container>
     </div>
     <content-strip>
@@ -40,17 +40,17 @@
         <h3-8>Strip h3-8</h3-8>
         <subtitle>This is a subtitle element.</subtitle>
         <p>This is a paragraph element.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="#" type="button" varient="dark">Button</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip>
       <container>
         <h4>Strip h4</h4>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="#" type="button" varient="dark">Button</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip>
@@ -59,10 +59,10 @@
         <subtitle>This is a subtitle element.</subtitle>
       </container>
     </content-strip>
-    <buttonrow>
+    <div class="buttonrow">
       <a href="#" type="button" varient="dark">Button</a>
       <a href="#" type="button" varient="dark">Longer Button</a>
-    </buttonrow>
+    </div>
     <content-strip-2>
       <container>
         <heading>Strip (type 2) - heading 2nd</heading>
