--- a/submission-received.html
+++ b/submission-received.html
@@ -13,9 +13,9 @@
     <div class="banner">
       <container class="center" style="height:calc(100vh - 185px);padding-top:0;padding-bottom:0;">
         <h3-8>Submission Sent</h3-8>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="contact.html#contact" type="button" varient="light">Return</a>
-        </buttonrow>
+        </div>
       </container>
     </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
