--- a/leadership-training.html
+++ b/leadership-training.html
@@ -25,18 +25,18 @@
       <container>
         <h4>National Youth Leadership Training (NYLT)</h4>
         <p>National Youth Leadership Training is an exciting, action-packed program designed for councils to provide youth members with leadership skills and experience they can use in their home troops.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="http://aacnylt.org" type="button" varient="light">AAC NYLT website</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip class="blue">
       <container>
         <h4>National Advanced Youth Leadership Experience (NAYLE)</h4>
         <p>National Advanced Youth Leadership Experience is an exciting program that enhances leadership skills and expands upon the team-building and ethical decision-making skills learned in NYLT. NAYLE emphasizes leadership, teamwork, and selfless service, and uses the core elements of NYLT to help youth internalize and strengthen these skills. The National Advanced Youth Leadership Experience course is now available at all national high-adventure bases. The material presented is basically the same at all four venues but is site-specific.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href="https://www.scouting.org/programs/boy-scouts/resources/nayle/" type="button" varient="light">NAYLE webpage</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
