--- a/recharter.html
+++ b/recharter.html
@@ -20,24 +20,24 @@
       <container>
         <h4>Venmo (Preferred)</h4>
         <p>This year, the Troop is offering the option of making your payment using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, enter the Scout’s name and “Recharter” (e.g. John Doe / Recharter) with your payment in the 'What's it for?' section.<br>You may use only your last name if your family has more than one member renewing their registration.<br><br>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <a href='https://venmo.com/troop-threeseventy' id='venmo' type='button' varient='dark'>Pay on Venmo</a>
           <a href='http://onelink.to/zryeqw' type='button' varient='dark'>Get app</a>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip>
       <container>
         <h4>PayPal</h4>
         <p>Like last year the Troop is offering the option of making your payment using PayPal.  Although PayPal will impose merchant fees for annual dues (which are not eligible for Friends and Family treatment), we understand that many scout families prefer PayPal over Venmo. You may pay using the button below.<br>Simply follow the online instructions. In the box entitled "Scout Name/Event", enter "John Doe/Recharter."  As with Venmo, you may use only your last name if your family has more than one member renewing their registration.</p>
-        <buttonrow>
+        <div class="buttonrow">
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="SXVTG8VBCPUNJ">
             <input id="paypal-button" type="image" src="https://raw.githubusercontent.com/troop-370/troop370/master/src/icons/pay-using-paypal-button.png" name="submit" alt="PayPal - The safer, easier way to pay online!" border="0" style="height: 36px;">
             <img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" border="0">
           </form>
-        </buttonrow>
+        </div>
       </container>
     </content-strip>
     <content-strip>
