--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <content-strip>
-      <container>
+      <div class="container">
         <h3-8>Contact Webmaster</h3-8>
         <subtitle>Jack Buehner</subtitle>
         <div class="row">
@@ -47,7 +47,7 @@
             <input type="hidden" name="_format" value="plain" />
           </form>
         </div>
-      </container>
+      </div>
     </content-strip>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
