--- a/forms-documents.html
+++ b/forms-documents.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div class="banner extra-padding-y center hide-mobile">
-      <container>
+      <div class="container">
         <h3-8>Forms &amp; Documents</h3-8>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <div class="split50">
           <div>
             <h4>Applications</h4>
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-      </container>
+      </div>
     </content-strip>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
