--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <carousel>
-    <container>
+    <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
         <div class="carousel-cell" id="card4">
           <div class="carousel-text-card">
@@ -42,19 +42,19 @@
           </div>
         </div>
       </div>
-    </container>
+    </div>
   </carousel>
   <div class="banner extra-padding-y">
-    <container>
+    <div class="container">
       <h3-8>Welcome to Troop 370</h3-8>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <div class="buttonrow">
         <a href="about.html#about" type="button" varient="light" class="bigger">About page</a>
       </div>
-    </container>
+    </div>
   </div>
   <carousel>
-    <container>
+    <div class="container">
       <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
         <div class="carousel-cell" id="imgcard1"></div>
         <div class="carousel-cell" id="imgcard2"></div>
@@ -89,14 +89,14 @@
         <div class="carousel-cell" id="imgcard31"></div>
         <div class="carousel-cell" id="imgcard32"></div>
       </div>
-    </container>
+    </div>
   </carousel>
   <div class="banner extra-padding-y red" id="time-banner">
-    <container>
+    <div class="container">
       <img id="meeting-icon" alt="meeting-icon" src="src/icons/meeting icon.png">
       <h3-8>Weekly Meetings</h3-8>
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
-    </container>
+    </div>
   </div>
 <script>
   if (navigator.serviceWorker) {
