--- a/leaders.html
+++ b/leaders.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div class="banner">
-      <container>
+      <div class="container">
         <h3-8>Current Leadership</h3-8>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>Scouts</h4>
         <p>Senior Patrol Leader: Ethan Hunt</p>
         <p>Assistant Senior Patrol Leader over Patrols: Logan Hunt</p>
@@ -25,15 +25,15 @@
         <div class="buttonrow">
           <a type="button" varient="dark">More Positions & Contact Information</a>
         </div>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>Scouters</h4>
         <p>Scoutmaster: Harry Evans<br><a href="contact.html">Contact</a></p>
         <p>Troop Committee Chairman: John Buehner<br><a href="troop-roster.html">Contact</a></p>
         <p>Chartered Organization Representative: Kent Watkins<br><a href="troop-roster.html">Contact</a></p>
-      </container>
+      </div>
     </content-strip>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
