--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <div class="banner">
-      <container>
+      <div class="container">
         <h3-8 class="hide-mobile" >Contact</h3-8>
         <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <h3-8>General Contact</h3-8>
         <div class="row">
           <form class="col s12" name="contact-general" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
@@ -57,7 +57,7 @@
             <input type="hidden" name="_cc" value="hgevans@bellsouth.net,iconherder@gmail.com" />
           </form>
         </div>
-      </container>
+      </div>
     </content-strip>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
