--- a/eagle-scout-honor-roll.html
+++ b/eagle-scout-honor-roll.html
@@ -11,25 +11,25 @@
   </head>
   <body>
     <div class="banner white">
-      <container>
+      <div class="container">
         <h3-8 class="hide-mobile">Eagle Scout Honor Roll</h3-8>
         <p>Troop 370 has a proud tradition of Eagle Scouts dating back to our first Eagle, George Takis, in 1965. Through the PDF file below you can view the impact that our Eagle Scouts, now over 200 in number, have had on their community through their Eagle Service Projects. What is more, our Troop 370 Eagle Scouts have continued to make their mark on the world through their service and leadership as adults.</p>
         <div class="buttonrow">
           <a href="#eagle-list" type="button" varient="dark">View Eagle Honor Roll List</a>
         </div>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <iframe src="https://www.batchgeo.com/map/a30ec08cf79f88a9f9a28322cda3d34c" class="project-map"></iframe>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <div id="eagle-list">
           <div data-type="AwesomeTableView" data-viewID="-LOnyNWJuHxbPlLf-Ul7"></div>
         </div>
-      </container>
+      </div>
     </content-strip>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
