--- a/finding-mb.html
+++ b/finding-mb.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <div class="banner white">
-      <container>
+      <div class="container">
         <h3-8 class="hide-mobile">Finding a Merit Badge Class or Counselor</h3-8>
         <p>Troop 370 hosts Merit Badge Clinics twice a year. The schedule can be viewed on the Calendar. Scouts can also register for other Merit Badge Clinics. In addition, scouts can reach out to our Merit Badge counselors at any time to work on Merit Badges.<br><br>To see all advancement opportunities - including Merit Badge Clinics and a list of Merit Badge counselors - please view the Advancement page.</p>
         <div class="buttonrow">
           <a href="advancement.html" type="button" varient="dark">Advancement</a>
         </div>
-      </container>
+      </div>
     </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
