--- a/helpful-links.html
+++ b/helpful-links.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <div class="banner white">
-      <container>
+      <div class="container">
         <h3-8>Helpful Links</h3-8>
         <p><a href="scouting.org">Boy Scouts of America</a></p>
         <p><a href="http://www.atlantabsa.org/">Atlanta Area Council</a></p>
         <p><a href="https://www.scouting.org/filestore/pdf/Boy_Scout_Insignia.pdf">Uniform Insignia Placement</a></p>
         <p><a href="https://www.scouting.org/scoutsource/HealthandSafety/GSS.aspx">Guide to Safe Scouting</a></p>
         <p><a href="https://www.rei.com/learn/expert-advice/loading-backpack.html">REI: How to pack a backpack (video)</a></p>
-      </container>
+      </div>
     </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
