--- a/recharter.html
+++ b/recharter.html
@@ -8,26 +8,26 @@
   </head>
   <body>
     <div class="banner">
-      <container>
+      <div class="container">
         <h3-8 class="hide-mobile">Annual Recharter</h3-8>
         <p>It's time to renew your registration (recharter). Each year the Troop and St James UMC renews their affiliation with the Boy Scouts of America. Recharter is also when individual youth and adult members of Troop 370 renew their memberships with the Troop.</p>
         <p>As in past years, a detailed recharter notice will be sent to each Troop 370 household. It lists those currently registered and the total fee due from that household for 2018. Check your email for more details.</p>
         <p>Please make every effort to complete the recharter process by November 30th.</p>
         <p>Choose one of the payment options below to recharter.</p>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>Venmo (Preferred)</h4>
         <p>This year, the Troop is offering the option of making your payment using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, enter the Scout’s name and “Recharter” (e.g. John Doe / Recharter) with your payment in the 'What's it for?' section.<br>You may use only your last name if your family has more than one member renewing their registration.<br><br>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.</p>
         <div class="buttonrow">
           <a href='https://venmo.com/troop-threeseventy' id='venmo' type='button' varient='dark'>Pay on Venmo</a>
           <a href='http://onelink.to/zryeqw' type='button' varient='dark'>Get app</a>
         </div>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>PayPal</h4>
         <p>Like last year the Troop is offering the option of making your payment using PayPal.  Although PayPal will impose merchant fees for annual dues (which are not eligible for Friends and Family treatment), we understand that many scout families prefer PayPal over Venmo. You may pay using the button below.<br>Simply follow the online instructions. In the box entitled "Scout Name/Event", enter "John Doe/Recharter."  As with Venmo, you may use only your last name if your family has more than one member renewing their registration.</p>
         <div class="buttonrow">
@@ -38,17 +38,17 @@
             <img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" border="0">
           </form>
         </div>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>Check and Snail Mail</h4>
         <p>If you prefer to pay by check instead of Venmo or PayPal:</p>
         <ul style="padding: var(--content-strip-elements-padding-between) var(--content-strip-padding-x) var(--content-strip-elements-padding-between) calc(var(--content-strip-padding-x) + 16px);">
           <li style="list-style-type: disc;list-style-position: outside;">Please make your check payable to “Troop 370”, clearly noting on the check that it is for RECHARTER and including the full name(s) of the scout(s) and adult(s) covered by the payment.</li>
           <li style="list-style-type: disc;list-style-position: outside;">Mail the check – and your email address - no later than November 30 to Lori Ainsworth at 5221 Riverview RD NW, Atlanta, GA 30327. </li>
         </ul>
-      </container>
+      </div>
     </content-strip>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
