--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <titlebar>
-      <container>
+      <div class="container">
         <heading>Site heading</heading>
-      </container>
+      </div>
     </titlebar>
     <topnav>
-      <container>
+      <div class="container">
         <ul>
           <li><a href="#home" id="home">Home</a></li>
           <li><a href="#news" id="news">News</a></li>
@@ -24,67 +24,67 @@
             </div>
           </li>
         </ul>
-      </container>
+      </div>
     </topnav>
     <div class="banner">
-      <container>
+      <div class="container">
         <h3-8>Banner</h3-8>
         <subtitle>subtitle</subtitle>
         <div class="buttonrow">
           <a href="#" type="button" varient="light">Button</a>
         </div>
-      </container>
+      </div>
     </div>
     <content-strip>
-      <container>
+      <div class="container">
         <h3-8>Strip h3-8</h3-8>
         <subtitle>This is a subtitle element.</subtitle>
         <p>This is a paragraph element.</p>
         <div class="buttonrow">
           <a href="#" type="button" varient="dark">Button</a>
         </div>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <h4>Strip h4</h4>
         <div class="buttonrow">
           <a href="#" type="button" varient="dark">Button</a>
         </div>
-      </container>
+      </div>
     </content-strip>
     <content-strip>
-      <container>
+      <div class="container">
         <h5>Strip h5</h5>
         <subtitle>This is a subtitle element.</subtitle>
-      </container>
+      </div>
     </content-strip>
     <div class="buttonrow">
       <a href="#" type="button" varient="dark">Button</a>
       <a href="#" type="button" varient="dark">Longer Button</a>
     </div>
     <content-strip-2>
-      <container>
+      <div class="container">
         <heading>Strip (type 2) - heading 2nd</heading>
         <p>this strip starts with a second level heading and can contain content like paragraphs and buttons - p</p>
-      </container>
+      </div>
     </content-strip-2>
     <content-strip-1>
-      <container>
+      <div class="container">
         <heading>Strip (type 1) - heading </heading>
         <p>this strip starts with a heading and can contain content like paragraphs and buttons - p</p>
-      </container>
+      </div>
     </content-strip-1>
     <content-strip-3>
-      <container>
+      <div class="container">
         <heading>Strip (type 3) - heading 3rd ONLY</heading>
-      </container>
+      </div>
     </content-strip-3>
     <content-strip-4>
-      <container>
+      <div class="container">
         <heading>Strip (type 4) - heading 3rd</heading>
         <p>this strip starts with a thrid level heading and can contain content like paragraphs and buttons - p</p>
-      </container>
+      </div>
     </content-strip-4>
 
     <p>h</p>
