--- a/submission-received.html
+++ b/submission-received.html
@@ -16,7 +16,7 @@
         <div class="buttonrow">
           <a href="contact.html#contact" type="button" varient="light">Return</a>
         </div>
-      </container>
+      </div>
     </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
